--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2020.10.24, v2.0.0
+
+feature:
+- (uncurrify) drop support of node < 4
+- (package) redrun v6.0.0
+- (package) browserify v16.0.0
+- (package) browserify v15.2.0
+- (package) browserify v14.0.0
+- (package) redrun v5.0.0
+- (package) redrun v4.0.0
+- (package) npm-run-all -> redrun
+- (package) add jscs v3.0.3
+- (package) browserify v13.0.0
+- (package) description: carried -> curried
+
+
 2015.11.10, v1.0.1
 
 feature:
