--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2020.12.07, v2.1.0
+
+feature:
+- (package) nyc v15.1.0
+- (package) madrun v8.0.2
+- (package) supertape v3.6.1
+- (package) putout v11.15.0
+- (package) eslint-plugin-putout v6.8.1
+
+
 2020.10.24, v2.0.2
 
 fix:
